Fix for flashing on iOS in-app browser

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -249,7 +249,7 @@
 
 .spotlight div:nth-child(1) {
   background-color: #9b5de5;
-  transform: rotate(-30deg) perspective(30px) rotateX(-5deg);
+  transform: rotate(-29deg) perspective(30px) rotateX(-5deg);
 }
 
 .spotlight div:nth-child(4) {
